# excel-splitter-tool

./: .gitignore  README.md  pyproject.toml  requirements.txt
docs/: excel合并功能设计.md
docs/superpowers/plans/: 2026-07-13-desktop-portable.md  2026-07-20-excel-splitter-performance.md
docs/superpowers/specs/: 2026-07-13-desktop-portable-design.md  2026-07-20-excel-splitter-performance-design.md
packaging/: desktop_entry.py  excel_splitter.spec  使用说明.txt
scripts/: build_portable.ps1  start_web.ps1  verify.ps1
src/excel_splitter/: __init__.py  __main__.py  cli.py  desktop.py  desktop_runtime.py  encryption.py  engine.py  excel_io.py  file_utils.py  merge_engine.py  merge_models.py  merge_planning.py  models.py  planning.py  preview.py  values.py
src/excel_splitter/web/: __init__.py  app.py  dialogs.py  merge_routes.py  routes.py
src/excel_splitter/web/static/: app.css  app.js
src/excel_splitter/web/templates/: index.html
tests/: conftest.py  test_cli.py  test_desktop.py  test_desktop_runtime.py  test_engine.py  test_file_utils.py  test_merge_engine.py  test_merge_models.py  test_merge_routes.py  test_merge_sub_blocks.py  test_models.py  test_packaging.py  test_planning.py  test_preview.py  test_split_blocks.py  test_values.py  test_web.py
